--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,7 +39,7 @@
   margin-left: auto
   margin-right: auto
   max-width: 1255px;
-  width: 100%;
+  width: 1255px
   padding-left: 15px
   padding-right: 15px
   box-sizing: border-box
@@ -48,6 +48,7 @@ $main-fonts : Arial, Helvetica, sans-serif;
   
 html
   overflow-x: hidden
+  min-width: 1255px;
 .body
   margin: 0
   padding: 0
