--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,12 @@ html {
 .first-section__form {
   max-width: 440px;
   position: relative;
-  top: 62px;
+  top: 119px;
   z-index: 1;
 }
 
 .first-section__form-inner {
-  margin-top: 32px;
-  padding-top: 54px;
+  padding-top: 30px;
 }
 
 .main-title {
@@ -243,6 +242,15 @@ html {
   background-image: url("../img/phone-icon.svg");
 }
 
+.form__item-wrapper--textarea:before {
+  top: 12px;
+  background-image: url("../img/text.svg");
+}
+
+.form__item-wrapper--textarea:after {
+  display: none;
+}
+
 .form__input {
   width: 100%;
   padding: 0 20px 0 48px;
@@ -276,6 +284,40 @@ html {
   color: #898989;
 }
 
+.form__textarea {
+  width: 100%;
+  padding: 4px 20px 4px 48px;
+  resize: none;
+  background: #FFFFFF;
+  border: 1px solid #979797;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-radius: 7px;
+  height: 45px;
+  line-height: 27px;
+  font-size: 13px;
+  line-height: 15px;
+  font-weight: bold;
+  color: #000000;
+  outline: none;
+}
+
+.form__textarea::-webkit-input-placeholder {
+  color: #898989;
+}
+
+.form__textarea:-moz-placeholder {
+  color: #898989;
+}
+
+.form__textarea::-moz-placeholder {
+  color: #898989;
+}
+
+.form__textarea:-ms-input-placeholder {
+  color: #898989;
+}
+
 .form__submit {
   width: 172px;
   height: 40px;
@@ -291,7 +333,7 @@ html {
   color: #292929;
   padding: 0;
   border: none;
-  margin-top: 20px;
+  margin-top: 17px;
   text-transform: uppercase;
   -webkit-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
