--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,7 @@ html {
   line-height: 15px;
   font-weight: bold;
   color: #000000;
+  font-family: Arial, Helvetica, sans-serif;
   outline: none;
 }
 
@@ -286,6 +287,7 @@ html {
 
 .form__textarea {
   width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
   padding: 4px 20px 4px 48px;
   resize: none;
   background: #FFFFFF;
