--- a/sass/style.sass
+++ b/sass/style.sass
@@ -210,12 +210,14 @@ html
     line-height: 15px
     font-weight: bold
     color: #000000
+    font-family: $main-fonts
     outline: none
     @include placeholder
       color: #898989;
 
   &__textarea
     width: 100%
+    font-family: $main-fonts
     padding: 4px 20px 4px 48px
     resize: none
     background: #FFFFFF;
